--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,8 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
-        android:startColor="#46DC12"
-        android:endColor="#69F33A"
+        android:startColor="#5CC928"
+        android:endColor="#A5EF7F"
         android:angle="-90"
         />
 
