--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#D7F7BB">
+    tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
         android:layout_marginLeft="180dp"
         android:layout_marginTop="250dp"
-        android:src="@drawable/leafie"
+        android:src="@drawable/leafy"
         tools:layout_editor_absoluteX="180dp"
         tools:layout_editor_absoluteY="258dp" />
 
@@ -22,4 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="S2H"
-        android:layout_centerInPare
+        android:textColor="@color/white"
+        android:layout_centerInParent="true"/>
+
+
+</RelativeLayout>
