--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -4,12 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home_page"
-    android:background="#101f26">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:backgroundTint="#255853"/>
+    tools:context=".Home_page">
+
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        android:orientation="horizontal"
+        android:background="#101f26">
+
+        <ImageView
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:alpha="0.1"
+            android:scaleType="centerCrop"
+            android:src="@drawable/planty1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="80dp"
+        android:layout_height="150dp"
+        android:background="#255853"
+        android:layout_marginLeft="350dp"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="70dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/pushie1"
+        android:alpha="0.9">
+    </ImageView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="#255853"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"></LinearLayout>
 
 </RelativeLayout>
+
+
