--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#101f26"
+    android:orientation="vertical"
     tools:context=".Login">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="170dp"
+        android:src="@drawable/leafy" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="67dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="50dp"
+        android:hint="  Username"
+        android:backgroundTint="#255853"
+        android:singleLine="false"
+        android:textColorHint="#92978D"
+        android:visibility="visible" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="67dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="30dp"
+        android:hint="  Password"
+        android:backgroundTint="#255853"
+        android:textColorHint="#92978D" />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/btn"
+        android:text="login"
+        android:textColor="@color/white" />
+
+
+
+</LinearLayout>
