--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="180dp"
         android:layout_marginTop="250dp"
-        android:src="@drawable/leafy"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="258dp" />
+        android:src="@drawable/leafy" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="S2H"
-        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:layout_marginLeft="180dp"
+        android:textColor="#101f26"
         android:layout_centerInParent="true"/>
 
 
-</RelativeLayout>
+</LinearLayout>
